# atmosphere

./: .flake8  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/atmosphere/: cli.py
src/atmosphere/core/: module.py
src/atmosphere/modules/: __init__.py
src/atmosphere/modules/brightness/: __init__.py  cli.py  config.py  controller.py
src/atmosphere/modules/volume/: __init__.py  cli.py  config.py  controller.py
src/atmosphere/modules/weather/: __init__.py  cli.py  config.py  controller.py  enums.py  utils.py
src/atmosphere/utils/: notification.py
