[tool.poetry]
name = "atmosphere"
version = "0.1.0"
description = ""
authors = ["Yoann C <38630523+cyoann@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
 { include = "atmosphere", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
typer = "^0.7.0"
dbus-python = "^1.3.2"
pydantic = "^1.10.5"

[tool.poetry.scripts]
atmosphere = "atmosphere.cli:main"



[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.16.2"

[tool.black]
line-length = 83
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = "atmosphere"
known_third_party = "typer,dbus_python,pydantic"
profile = "black"



[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
max-line-length = 83

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
